<resources>
    <string name="app_name">Quiz App- Instructor</string>
    <string name="welcome_instructor">Welcome, Instructor</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">Username</string>
    <string name="log_in">Log In</string>
    <string name="modify_previous_quiz">Modify Previous Quiz</string>
    <string name="create_new_quiz">Create New Quiz</string>
    <string name="go_to_study_material_section">Go to Study Material Section</string>
    <string name="see_feedback">See Feedbacks</string>
    <string name="log_out">Log Out</string>
    <string name="choose_an_option">Choose an option</string>
    <string name="reset">Reset</string>
    <string name="add_option">Add Option</string>
    <string name="add_question_here">Add Question here</string>
    <string name="upload_your_own_study_material">Upload Your Own Study Material</string>
    <string name="go_back">Go Back</string>
    <string name="upload">Upload</string>
    <string name="submit">Submit</string>
    <string name="question_1">Question 1</string>
    <string name="save_changes">Save Changes</string>
    <string name="study_material_1">Study Material 1</string>
    <string name="subject_subject_name">Subject: Subject Name</string>
    <string name="received_feedbacks">Received Feedbacks</string>
    <string name="add_material">Add Material</string>
    <string name="select_class">Select Class</string>
    <string name="proceed">Proceed</string>
    <string name="check_previous_quiz_marks">Check Previous Quiz Marks</string>
    <string name="select_subject">Select Subject</string>
    <string name="select_chapter">Select Chapter</string>
    <string name="type_the_qyestion_here">Type the Qyestion here</string>
    <string name="type_the_question">Type the question</string>
    <string name="insert_your_question">Insert your question</string>
    <string name="option_1">Option 1</string>
    <string name="done">Done</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>

    <string-array name="Select_Class">
        <item>Select Class</item>
        <item>Class 5</item>
        <item>Class 6</item>
        <item>Class 7</item>
        <item>Class 8</item>
        <item>Class 9</item>
        <item>Class 10</item>
        <item>Class 11</item>
        <item>Class 12</item>
        <item>Varsity Admission</item>
    </string-array>
</resources>
