<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectorActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="212dp"
        android:fontFamily="@font/archivo_narrow"
        android:gravity="center"
        android:text="@string/welcome_instructor"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.028" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/archivo_narrow"
        android:text="@string/choose_an_option"
        android:textColor="@color/colorPrimary"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.349" />

    <Button
        android:id="@+id/buttonCreateQuiz"
        android:layout_width="234dp"
        android:layout_height="60dp"
        android:layout_marginBottom="396dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/archivo_narrow"
        android:text="@string/create_new_quiz"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonModifyQuiz"
        android:layout_width="234dp"
        android:layout_height="60dp"
        android:layout_marginBottom="324dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/archivo_narrow"
        android:text="@string/modify_previous_quiz"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonMaterialSection"
        android:layout_width="234dp"
        android:layout_height="60dp"
        android:layout_marginBottom="252dp"
        android:background="#212121"
        android:fontFamily="@font/archivo_narrow"
        android:text="@string/go_to_study_material_section"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonModifyQuiz"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonFeedback"
        android:layout_width="234dp"
        android:layout_height="60dp"
        android:layout_marginBottom="180dp"
        android:background="#3B607F"
        android:fontFamily="@font/archivo_narrow"
        android:text="@string/see_feedback"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonMaterialSection"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:layout_width="158dp"
        android:layout_height="53dp"
        android:background="#A51919"
        android:fontFamily="@font/archivo_narrow"
        android:text="@string/log_out"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.936"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />


</androidx.constraintlayout.widget.ConstraintLayout>