<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizWindow">

    <Button
        android:id="@+id/resetBtn"
        android:layout_width="245dp"
        android:layout_height="62dp"
        android:background="#A51919"
        android:text="@string/reset"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addOption4"
        app:layout_constraintVertical_bias="0.646" />

    <RadioButton
        android:id="@+id/addOption3"
        android:layout_width="354dp"
        android:layout_height="60dp"
        android:background="#99B1C5"
        android:text="@string/add_option"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addQuestion"
        app:layout_constraintVertical_bias="0.323" />

    <RadioButton
        android:id="@+id/addOption4"
        android:layout_width="354dp"
        android:layout_height="60dp"
        android:background="#B9C6D1"
        android:text="@string/add_option"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addQuestion"
        app:layout_constraintVertical_bias="0.472" />

    <RadioButton
        android:id="@+id/addOption2"
        android:layout_width="354dp"
        android:layout_height="60dp"
        android:background="#6492B9"
        android:text="@string/add_option"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addQuestion"
        app:layout_constraintVertical_bias="0.179" />

    <TextView
        android:id="@+id/addQuestion"
        android:layout_width="266dp"
        android:layout_height="46dp"
        android:text="@string/add_question_here"
        android:textColor="#4E714F"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.186" />

    <RadioButton
        android:id="@+id/addOption1"
        android:layout_width="354dp"
        android:layout_height="60dp"
        android:background="#173A57"
        android:text="@string/add_option"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addQuestion"
        app:layout_constraintVertical_bias="0.03" />

    <ImageButton
        android:id="@+id/backButtonChapters"
        android:layout_width="56dp"
        android:layout_height="43dp"
        android:background="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.062"
        app:srcCompat="@drawable/backarrow" />

    <Button
        android:id="@+id/quizSubmit"
        android:layout_width="245dp"
        android:layout_height="62dp"
        android:background="#43A037"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addOption4"
        app:layout_constraintVertical_bias="0.283" />

</androidx.constraintlayout.widget.ConstraintLayout>